fix(frontend/ui): disable kpi preview on mobile, minor css fixes

--- a/packages/frontend/src/components/campaigns/campaign/apr/styles.module.css
+++ b/packages/frontend/src/components/campaigns/campaign/apr/styles.module.css
@@ -1,7 +1,7 @@
 @reference "../../../../app.css";
 
 .root {
-    @apply w-fit;
+    @apply w-fit pointer-events-none md:pointer-events-auto;
 }
 
 .aprWrapper {
@@ -17,7 +17,7 @@
 }
 
 .skeletonDescription {
-    @apply h-12;
+    @apply h-[60px];
 }
 
 .skeletonDescription :global(.skeleton) {
